fix title alignment

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -47,7 +47,7 @@
   .iw-title {
     padding: 0.5rem;
     position: relative;
-    top: -5px;
+    top: -2px;
     font-size: 14px;
   }
   .hover {
